tests/errors/BadConstructorName.java
import org.aspectj.testing.Tester;

class BadConstructorName {
    public FooBar() {} 
}

